gcc/testsuite/objc.dg/pr28050.m
/* { dg-do compile } */
int i = [0]; /* { dg-error "expected .:. before .\\]. token" } */
